--- a/client/src/components/Map/map.css
+++ b/client/src/components/Map/map.css
@@ -1,6 +1,12 @@
 
 .map-container {
-    height: 100vh;
+    position:absolute;
+    top:60px;
+    bottom:0;
+    right: 0;
+    left: 0;
+    z-index: 999;
+    cursor: alias;
     }
     .sidebar {
       background-color: rgba(35, 55, 75, 0.9);
@@ -9,7 +15,7 @@
       font-family: monospace;
       z-index: 1;
       position: absolute;
-      top: 0;
+      bottom: 0;
       left: 0;
       margin: 12px;
       border-radius: 4px;
@@ -20,12 +26,6 @@
         background-color: #3498db;
         border-radius: 50%;
         border: 2px solid #ffffff;
-      }
-      .map-overlay {
-        position: absolute;
-        top: 100px;
-        right: 10px;
-        z-index: 1; /* Ensure the overlay is on top of the map */
       }
       
       /* Style the map styles buttons */
@@ -50,4 +50,29 @@
       
       .map-style-button:hover {
         background-color: #005d99;
+      }
+      .button {
+        
+        width: 30%;
+        
+        background-color: #0074e4; /* Customize button color */
+        color: #fff; /* Text color */
+        padding: 10px 20px; /* Adjust padding as needed */
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease; /* Hover transition */
+        z-index: 1000;
+      }
+      
+      .button:hover {
+        background-color: #0051ad; /* Hover color */
+      }
+      .button-container {
+        position: absolute;
+        bottom: 20px; /* Adjust the distance from the bottom as needed */
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center; /* Center-align the button horizontally */
+        width: 100%; /* Make the container full width */
       }
